# work_buddy

./: .env  .gitignore  AGENT_CAPABILITIES.md  README.md  pyproject.toml
src/work_buddy/: __init__.py  agent.py  guardrails.py  providers.py  sub_agents.py  test_agent.py  tools.py
